--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -32,13 +32,13 @@
               <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#" >Inspection<span class="caret"></span></a>
               <ul class="dropdown-menu">
                   <li><a href="{% url 'start_up_shot_view_active' %}">Startup Shot</a></li>
-                <li><a href="/inspection/">Inspection Home</a></li>
+                <li><a href="{% url 'inspection_index' %}">Inspection Home</a></li>
 {#                  <li><a href="/inspection_v2/">Inspection 2.0 Home</a></li>#}
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Reports</li>
                   <li><a href="{% url 'start_up_shot_view' %}">Startup Shot Report</a></li>
-                <li><a href="/inspection/itemReport/">Item Report</a></li>
-                <li><a href="/inspection/jobReport/">Job Report</a></li>
+                <li><a href="{% url 'inspection_item_report' %}">Item Report</a></li>
+                <li><a href="{% url 'inspection_job_report' %}">Job Report</a></li>
               </ul>
             </li>
 
