Add two new variable field forms (text and pass-fail)

--- a/inspection/templates/inspection/detail_job.html
+++ b/inspection/templates/inspection/detail_job.html
@@ -39,7 +39,7 @@
                         {% endfor %}
 
                         {% for eachNI in numeric_inspectionType %}
-                            <a class="list-group-item" href="/inspection/entry/?job_number_id={{active_job.id}}&inspection_type=NumericVF&inspection_name_id={{eachNI.testName_id}}">
+                            <a class="list-group-item" href="/inspection/entry/?job_number_id={{active_job.id}}&inspection_type=Numeric&inspection_name_id={{eachNI.testName_id}}">
                             <h4 class="list-group-item-heading">{{ eachNI.testName }}</h4>
                             <p class="list-group-item-text">Click Here to record a record for {{ eachNI.testName }} </p>
                             </a>
@@ -60,7 +60,7 @@
                         {% endfor %}
 
                         {% for eachRange in range_inspectionType %}
-                            <a class="list-group-item" href="/inspection/entry/?job_number_id={{active_job.id}}&inspection_type=RangeVF&inspection_name_id={{eachRange.testName_id}}">
+                            <a class="list-group-item" href="/inspection/entry/?job_number_id={{active_job.id}}&inspection_type=Range&inspection_name_id={{eachRange.testName_id}}">
                             <h4 class="list-group-item-heading">{{ eachRange.testName }}</h4>
                             <p class="list-group-item-text">Click Here to record a record for {{ eachRange.testName }} </p>
                             </a>
