Add new error log

--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -55,7 +55,7 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">Dashboards<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                  <li><a href="/dashboard/errorLog/">Error Log</a></li>
+                  <li><a href="{% url 'production_errors' %}">Error Log</a></li>
                 <li><a href="/dashboard/errorProdLog/">Production Comments</a></li>
                 <li><a href="/dashboard/inspectionLog/">Inspection Log</a></li>
               </ul>
