Use proper divs for the table and plot

--- a/dashboard/templates/dashboard/error_log.html
+++ b/dashboard/templates/dashboard/error_log.html
@@ -8,13 +8,21 @@
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
+ <div class="panel panel-default">
+     <div class="panel-body">
+        <div id="errorByTest" style="width: 800px; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>
+    </div>
+ </div>
 
-<div id="errorByTest" style="width: 800px; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>
+  <div class="panel panel-default">
+     <div class="panel-body">
+        <div id="errorByMachine" style="width: 800px; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>
+    </div>
+ </div>
 
-<div id="errorByMachine" style="width: 800px; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>
-
-
-<html>
+  <div class="panel panel-default">
+     <div class="panel-body">
     <table class="datatable table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <th>Date</th>
@@ -30,8 +38,10 @@
 
         </tbody>
     </table>
-</html>
+ </div>
+ </div>
 
+     </div>
 
 
 
