--- a/dashboard/templates/dashboard/error_log.html
+++ b/dashboard/templates/dashboard/error_log.html
@@ -1,48 +1,50 @@
-
 {% include "nav/nav.html" %}
 
 
 <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
 <script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
-<link rel="stylesheet" type="text/css" href=https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css />
+<link rel="stylesheet" type="text/css"
+      href=https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css/>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 
 <div class="col-sm-offset-1 col-sm-10 bootcards-cards">
- <div class="panel panel-default">
-     <div class="panel-body">
-        <div id="errorByTest" style="width: 800px; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div id="errorByTest">
+                <!-- Plotly chart will be drawn inside this DIV --></div>
+        </div>
     </div>
- </div>
 
-  <div class="panel panel-default">
-     <div class="panel-body">
-        <div id="errorByMachine" style="width: 800px; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div id="errorByMachine">
+                <!-- Plotly chart will be drawn inside this DIV --></div>
+        </div>
     </div>
- </div>
 
-  <div class="panel panel-default">
-     <div class="panel-body">
-    <table class="datatable table table-striped table-bordered" cellspacing="0" width="100%">
-        <thead>
-            <th>Date</th>
-            <th>Inspection Type</th>
-            <th>Job Number</th>
-            <th>Item Number</th>
-            <th>Item Description</th>
-            <th>Test Name</th>
-            <th>Inspection Result</th>
-            <th>Report Text</th>
-        </thead>
-        <tbody>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <table class="datatable table table-striped table-bordered"
+                   cellspacing="0" width="100%">
+                <thead>
+                <th>Date</th>
+                <th>Inspection Type</th>
+                <th>Job Number</th>
+                <th>Item Number</th>
+                <th>Item Description</th>
+                <th>Test Name</th>
+                <th>Inspection Result</th>
+                <th>Report Text</th>
+                </thead>
+                <tbody>
 
-        </tbody>
-    </table>
- </div>
- </div>
+                </tbody>
+            </table>
+        </div>
+    </div>
 
-     </div>
-
+</div>
 
 
 <script>
@@ -63,23 +65,70 @@
             "ajax": "{% url 'get_active_error_verbose' %}"
         });
         });
+
 </script>
 
 <script>
     $(document).ready(function() {
-        Plotly.d3.json( "{% url 'get_active_error_count_by_test' %}", function(error, data){
-            if (error) return console.warn(error);
-            Plotly.newPlot('errorByTest', data.data, data.layout);
-        });
+    var d3 = Plotly.d3;
+
+var WIDTH_IN_PERCENT_OF_PARENT = 60,
+    HEIGHT_IN_PERCENT_OF_PARENT = 80;
+
+var gd3 = d3.select('#errorByTest')
+    .append('div')
+    .style({
+        width: WIDTH_IN_PERCENT_OF_PARENT + '%',
+        'margin-left': (100 - WIDTH_IN_PERCENT_OF_PARENT) / 2 + '%',
+
+        height: HEIGHT_IN_PERCENT_OF_PARENT + 'vh',
+        'margin-top': (100 - HEIGHT_IN_PERCENT_OF_PARENT) / 2 + 'vh'
     });
+
+var gd = gd3.node();
+
+        d3.json( "{% url 'get_active_error_count_by_test' %}", function(error, data){
+            if (error) return console.warn(error);
+            Plotly.newPlot(gd, data.data, data.layout);
+        });
+
+        window.onresize = function() {
+    Plotly.Plots.resize(gd);
+};
+
+    });
+
 </script>
 
 
 <script>
     $(document).ready(function() {
-        Plotly.d3.json( "{% url 'get_active_error_count_by_machine' %}", function(error, data){
-            if (error) return console.warn(error);
-            Plotly.newPlot('errorByMachine', data.data, data.layout);
-        });
+    var d3 = Plotly.d3;
+
+var WIDTH_IN_PERCENT_OF_PARENT = 60,
+    HEIGHT_IN_PERCENT_OF_PARENT = 80;
+
+var gd3 = d3.select('#errorByMachine')
+    .append('div')
+    .style({
+        width: WIDTH_IN_PERCENT_OF_PARENT + '%',
+        'margin-left': (100 - WIDTH_IN_PERCENT_OF_PARENT) / 2 + '%',
+
+        height: HEIGHT_IN_PERCENT_OF_PARENT + 'vh',
+        'margin-top': (100 - HEIGHT_IN_PERCENT_OF_PARENT) / 2 + 'vh'
     });
+
+var gd = gd3.node();
+
+
+        d3.json( "{% url 'get_active_error_count_by_machine' %}", function(error, data){
+            if (error) return console.warn(error);
+            Plotly.newPlot(gd, data.data, data.layout);
+        });
+
+                window.onresize = function() {
+        Plotly.Plots.resize(gd);
+        };
+    });
+
 </script>
