--- a/dashboard/templates/dashboard/error_log.html
+++ b/dashboard/templates/dashboard/error_log.html
@@ -107,7 +107,7 @@ var gd = gd3.node();
 var WIDTH_IN_PERCENT_OF_PARENT = 60,
     HEIGHT = 300;
 
-var gd3 = d3.select('#errorByTest')
+var gd3 = d3.select('#errorByMachine')
     .append('div')
     .style({
         width: WIDTH_IN_PERCENT_OF_PARENT + '%',
