Hopefully this is it for today

--- a/dashboard/templates/dashboard/inspection_summary.html
+++ b/dashboard/templates/dashboard/inspection_summary.html
@@ -8,6 +8,10 @@
 
 
 <html>
+
+<div class="col-sm-offset-1 col-sm-10 bootcards-cards">
+     <div class="panel panel-default">
+     <div class="panel-body">
     <table class="datatable table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <th>Date</th>
@@ -23,6 +27,7 @@
 
         </tbody>
     </table>
+         </div></div></div>
 </html>
 
 <script>
