--- a/dashboard/templates/dashboard/inspection_summary.html
+++ b/dashboard/templates/dashboard/inspection_summary.html
@@ -15,12 +15,14 @@
     <table class="datatable table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <th>Date</th>
+            <th>Workstation</th>
             <th>Inspection Type</th>
             <th>Job Number</th>
             <th>Item Number</th>
             <th>Item Description</th>
             <th>Test Name</th>
             <th>Inspection Result</th>
+            <th>Cavity</th>
             <th>Report Text</th>
         </thead>
         <tbody>
