Create Javascript for tree

--- a/job_report_viewer/templates/job_report_viewer/js_tree.html
+++ b/job_report_viewer/templates/job_report_viewer/js_tree.html
@@ -19,13 +19,25 @@ $(document).ready(function(){
             $('#treeContainer').on("select_node.jstree", function (e, data) {
             alert("node_id: " + data.node.data.url);
             if (data.node.data.url != null) {
-                $.get( data.node.data.url, function( data ) {
-                  console.log(data);
-                  $('#dataHolder').html(data);
-                  alert( "Load was performed." );
+                $.get( data.node.data.url, function(tableData) {
+                  console.log(tableData);
+                  if (tableData.html){$('#dataHolder').html(tableData)};
+                  if (tableData.js) {
+                    loadTableData(url);
+                  }
                 });
             }
             });
         });
 });
+</script>
+
+<script>
+   function loadTableData(url) {
+        var oTable = $('.datatable').dataTable({
+            "pageLength": 25,
+            "order": [[ 0, "desc" ]],
+            "ajax": url
+        });
+        }
 </script>
