--- a/job_report_viewer/templates/job_report_viewer/job_report_base.html
+++ b/job_report_viewer/templates/job_report_viewer/job_report_base.html
@@ -9,9 +9,11 @@
 
 {% include "nav/nav.html" %}
 
-
+{% load staticfiles %}
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.3/themes/default/style.min.css" />
 <script src="//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.3/jstree.min.js"></script>
+<script src="{% static "datatables/jquery.dataTables.min.js" %}"></script>
+<link rel="stylesheet" type="text/css"  href="{% static "datatables/jquery.dataTables.min.css" %}"/>
 
 <div class="col-sm-2 bootcards-cards">
     {% include "job_report_viewer/side_navigation.html" %}
@@ -21,7 +23,7 @@
 <div class="col-sm-10 bootcards-cards">
     <div class="panel panel-default">
         <div id="dataHolder">
-            <p>friend</p>
+            <p></p>
         </div>
     </div>
 </div>
@@ -33,6 +35,7 @@
 <script>
 
     document.getElementById("coverPage").onclick = function() {coverPageLoad()};
+
     function coverPageLoad() {
         $( "#dataHolder" ).load( "{% url 'cover_page' %}?job_number={{ job_number }}", function( response, status, xhr ) {
           if ( status == "error" ) {
