Add header to job report and some other things

--- a/job_report_viewer/templates/job_report_viewer/job_report_base.html
+++ b/job_report_viewer/templates/job_report_viewer/job_report_base.html
@@ -22,6 +22,9 @@
 
 <div class="col-sm-10 bootcards-cards">
     <div class="panel panel-default">
+        <div class="panel-heading clearfix">
+                <h3 class="panel-title pull-left">Job Report: {{job_number}}</h3>
+            </div>
         <div id="dataHolder">
             <p></p>
         </div>
