--- a/job_report_viewer/templates/job_report_viewer/data_table_base.html
+++ b/job_report_viewer/templates/job_report_viewer/data_table_base.html
@@ -1,6 +1,7 @@
 <p></p>
 <table class="datatable table table-striped table-bordered"
        cellspacing="0" width="100%">
+    <caption>{{ caption }}</caption>
     <thead>
     {% for each_header_item in table_headers %}
     <th>{{each_header_item}}</th>
