Add caption to table and hover

--- a/job_report_viewer/templates/job_report_viewer/data_table_base.html
+++ b/job_report_viewer/templates/job_report_viewer/data_table_base.html
@@ -1,5 +1,5 @@
 <p></p>
-<table class="datatable table table-striped table-bordered"
+<table class="datatable table table-striped table-bordered table-hover"
        cellspacing="0" width="100%">
     <caption>{{ caption }}</caption>
     <thead>
