--- a/job_report_viewer/templates/job_report_viewer/cover_page.html
+++ b/job_report_viewer/templates/job_report_viewer/cover_page.html
@@ -1,7 +1,7 @@
 {% load mathfilters %}
 <p>
 </p>
-<table class="table table-hover">
+<table class="table table-bordered table-striped table-hover">
     <tbody>
     {% for each_item in cover_page.job_meta %}
     <tr>
