TODO: finish inspection summary

--- a/job_report_viewer/templates/job_report_viewer/data_table_base.html
+++ b/job_report_viewer/templates/job_report_viewer/data_table_base.html
@@ -1,7 +1,7 @@
 <p></p>
 <table class="datatable table table-striped table-bordered table-hover"
        cellspacing="0" width="100%">
-    <caption>{{ caption }}</caption>
+    <caption align="bottom">{{ caption }}</caption>
     <thead>
     {% for each_header_item in table_headers %}
     <th>{{each_header_item}}</th>
