--- a/inspection/templates/inspection/forms/genInspection.html
+++ b/inspection/templates/inspection/forms/genInspection.html
@@ -27,14 +27,20 @@
             <h3 class="panel-title pull-left">{{ form_title }}</h3>
         </div>
             {% include "project_form_templates/gen_form.html" %}
-
+            {% if use_calculator %}
+                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModalCalculator">Open Modal</button>
+            {% endif %}
     </div>
 </div>
+
+
+{% include "inspection/forms/modal_cavity_calculator.html" %}
 
 
 </body>
 </html>
 
+{% include "inspection/forms/cavity_calculator_js.html" %}
 
 {% if use_checkbox %}
     {% include "inspection/subTemplates/js_helpers/subcheckBoxSelectLock.html" %}
