--- a/inspection/templates/inspection/forms/cavity_calculator_js.html
+++ b/inspection/templates/inspection/forms/cavity_calculator_js.html
@@ -9,6 +9,7 @@
           if ((observedValue) && (cavitiesSampled)) {
             resultValue = observedValue / cavitiesSampled;
             document.getElementById('resultValue').value = round(resultValue, 3);
+            document.getElementById({{id_numeric}}).value = round(resultValue, 3);
             console.log(resultValue);
           }
         }
