--- a/inspection/templates/inspection/forms/genInspection.html
+++ b/inspection/templates/inspection/forms/genInspection.html
@@ -28,7 +28,7 @@
         </div>
             {% include "project_form_templates/gen_form.html" %}
             {% if use_calculator %}
-                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModalCalculator">Open Modal</button>
+                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModalCalculator">Calculator</button>
             {% endif %}
     </div>
 </div>
@@ -37,10 +37,10 @@
 {% include "inspection/forms/modal_cavity_calculator.html" %}
 
 
+{% include "inspection/forms/cavity_calculator_js.html" %}
+
 </body>
 </html>
-
-{% include "inspection/forms/cavity_calculator_js.html" %}
 
 {% if use_checkbox %}
     {% include "inspection/subTemplates/js_helpers/subcheckBoxSelectLock.html" %}
