--- a/templates/project_form_templates/gen_form.html
+++ b/templates/project_form_templates/gen_form.html
@@ -4,8 +4,19 @@
     {% csrf_token %}
     {% bootstrap_form form layout='horizontal' %}
     {% buttons %}
-        <button type="submit" class="btn btn-primary">
+    <div class="row">
+        <div class="col-sm-2">
+            % if use_calculator %}
+                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModalCalculator">Calculator</button>
+            {% endif %}
+        </div>
+
+        <div class="col-sm-2">
+            <button type="submit" class="btn btn-primary">
             {% bootstrap_icon "star" %} Submit
-        </button>
+            </button>
+        </div>
+    </div>
+
     {% endbuttons %}
 </form>
