--- a/templates/project_form_templates/gen_form.html
+++ b/templates/project_form_templates/gen_form.html
@@ -6,7 +6,7 @@
     {% buttons %}
     <div class="row">
         <div class="col-sm-2">
-            % if use_calculator %}
+            {% if use_calculator %}
                 <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModalCalculator">Calculator</button>
             {% endif %}
         </div>
@@ -17,6 +17,5 @@
             </button>
         </div>
     </div>
-
     {% endbuttons %}
 </form>
