--- a/templates/project_form_templates/gen_form.html
+++ b/templates/project_form_templates/gen_form.html
@@ -5,17 +5,19 @@
     {% bootstrap_form form layout='horizontal' %}
     {% buttons %}
     <div class="row">
-        <div class="col-sm-2">
-            {% if use_calculator %}
-                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModalCalculator">Calculator</button>
-            {% endif %}
-        </div>
-
-        <div class="col-sm-2">
+        <div class="col-sm-1">
             <button type="submit" class="btn btn-primary">
             {% bootstrap_icon "star" %} Submit
             </button>
         </div>
+
+        <div class="col-sm-1">
+            {% if use_calculator %}
+                <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModalCalculator">Calculator</button>
+            {% endif %}
+        </div>
+
+
     </div>
     {% endbuttons %}
 </form>
