--- a/inspection/templates/inspection/detail_job.html
+++ b/inspection/templates/inspection/detail_job.html
@@ -21,6 +21,11 @@
             <div class="panel panel-default">
                 <div class="list-group">
 
+                    <a class="list-group-item" href="{% url 'job_report_base' %}?job_number={{ active_job.jobNumber.strip }}&workstation={{active_job.machNo}}">
+                            <h4 class="list-group-item-heading">Job Report Viewer (beta)</h4>
+                            <p class="list-group-item-text">Click here to view the current job report</p>
+                    </a>
+
                         <a class="list-group-item" href="/inspection/jobReport/{{ active_job.jobNumber.strip }}">
                             <h4 class="list-group-item-heading">Job Report</h4>
                             <p class="list-group-item-text">Click here to view the current job report</p>
