--- a/job_report_viewer/templates/job_report_viewer/job_report_base.html
+++ b/job_report_viewer/templates/job_report_viewer/job_report_base.html
@@ -15,7 +15,20 @@
 <script src="{% static "datatables/jquery.dataTables.min.js" %}"></script>
 <link rel="stylesheet" type="text/css"  href="{% static "datatables/jquery.dataTables.min.css" %}"/>
 
-<div class="col-sm-2 bootcards-cards">
+<script type="text/javascript">
+function show_sidebar()
+{
+document.getElementById('sidebar').style.visibility="visible";
+}
+
+function hide_sidebar()
+{
+document.getElementById('sidebar').style.visibility="hidden";
+}
+</script>
+
+
+<div class="col-sm-2 bootcards-cards"  id="wrapper" onMouseOver="show_sidebar()" onMouseOut="hide_sidebar()">
     {% include "job_report_viewer/side_navigation.html" %}
 </div>
 
