Use a sidebar but hide it when not moused over

--- a/job_report_viewer/templates/job_report_viewer/job_report_base.html
+++ b/job_report_viewer/templates/job_report_viewer/job_report_base.html
@@ -18,12 +18,12 @@
 <script type="text/javascript">
 function show_sidebar()
 {
-document.getElementById('sidebar').style.visibility="visible";
+document.getElementById('wrapper').style.visibility="visible";
 }
 
 function hide_sidebar()
 {
-document.getElementById('sidebar').style.visibility="hidden";
+document.getElementById('wrapper').style.visibility="hidden";
 }
 </script>
 
