Aligned numeric inspections to follow other primitives in how the top level regime is referenced

--- a/inspection/templates/inspection/detail_job.html
+++ b/inspection/templates/inspection/detail_job.html
@@ -26,10 +26,10 @@
                             <p class="list-group-item-text">Click here to view the current job report</p>
                     </a>
 
-                        <a class="list-group-item" href="/inspection/jobReport/{{ active_job.jobNumber.strip }}">
-                            <h4 class="list-group-item-heading">Job Report</h4>
-                            <p class="list-group-item-text">Click here to view the current job report</p>
-                        </a>
+                        <!--<a class="list-group-item" href="/inspection/jobReport/{{ active_job.jobNumber.strip }}">-->
+                            <!--<h4 class="list-group-item-heading">Job Report</h4>-->
+                            <!--<p class="list-group-item-text">Click here to view the current job report</p>-->
+                        <!--</a>-->
 
                         <a class="list-group-item" href="/inspection/jobReport/{{ active_job.jobNumber.strip }}/pdf/">
                             <h4 class="list-group-item-heading">PDF Job Report</h4>
