--- a/inspection/templates/inspection/subTemplates/subNumericInspection.html
+++ b/inspection/templates/inspection/subTemplates/subNumericInspection.html
@@ -2,9 +2,9 @@
         <div class="panel panel-default">
                 <div class="panel-heading clearfix">
                     {% if numericDict.0.numericTestName.testName.report_name %}
-                        <h3 class="panel-title pull-left"> {{ numericDict.0.numericTestName.testName.report_name }} </h3>
+                        <h3 class="panel-title pull-left"> {{ numericDict.0.numeric_test_name.report_name }} </h3>
                     {% else %}
-                        <h3 class="panel-title pull-left"> {{ numericDict.0.numericTestName.testName }} </h3>
+                        <h3 class="panel-title pull-left"> {{ numericDict.0.numeric_test_name }} </h3>
                     {% endif %}
                 </div>
             <div class="panel-body">
